syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;

message RangeMessage {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message ScoreMessage {
  int64 nextValue = 1;
}

message Empty {}

service RemoteService {
  rpc genSequence(RangeMessage) returns (stream ScoreMessage);
}
